fix slideshow arrow z-index

--- a/assets/templates/investable/js/bxslider/jquery.bxslider.css
+++ b/assets/templates/investable/js/bxslider/jquery.bxslider.css
@@ -152,7 +152,7 @@
 	width: 32px;
 	height: 32px;
 	text-indent: -9999px;
-	z-index: 9999;
+	z-index: 90;
 }
 
 .bx-wrapper .bx-controls-direction a.disabled {
